Add no SMP options to the native cd kboot menu

--- a/tools/kboot/kboot-native-cd.cfg
+++ b/tools/kboot/kboot-native-cd.cfg
@@ -18,3 +18,23 @@ entry "Mezzano - hardware detection, video console" {
       set "video_mode" "lfb:1024x768"
       mezzano "/image" "freestanding" "video-console"
 }
+
+entry "Mezzano - no SMP" {
+      set "video_mode" "lfb:1024x768"
+      mezzano "/image" "freestanding" "no-detect" "no-smp"
+}
+
+entry "Mezzano - no SMP, video console" {
+      set "video_mode" "lfb:1024x768"
+      mezzano "/image" "freestanding" "no-detect" "video-console" "no-smp"
+}
+
+entry "Mezzano - no SMP, hardware detection" {
+      set "video_mode" "lfb:1024x768"
+      mezzano "/image" "freestanding" "no-smp"
+}
+
+entry "Mezzano - no SMP, hardware detection, video console" {
+      set "video_mode" "lfb:1024x768"
+      mezzano "/image" "freestanding" "video-console" "no-smp"
+}
